; ModuleID = '/home/carl/AnghaBench/mpv/common/extr_msg.c_mp_msg_flush_status_line.c'
source_filename = "/home/carl/AnghaBench/mpv/common/extr_msg.c_mp_msg_flush_status_line.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_log = type { i64 }

@mp_msg_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_msg_flush_status_line(%struct.mp_log* %0) #0 {
  %2 = alloca %struct.mp_log*, align 8
  store %struct.mp_log* %0, %struct.mp_log** %2, align 8
  %3 = call i32 @pthread_mutex_lock(i32* @mp_msg_lock)
  %4 = load %struct.mp_log*, %struct.mp_log** %2, align 8
  %5 = getelementptr inbounds %struct.mp_log, %struct.mp_log* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %13

8:                                                ; preds = %1
  %9 = load %struct.mp_log*, %struct.mp_log** %2, align 8
  %10 = getelementptr inbounds %struct.mp_log, %struct.mp_log* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = call i32 @flush_status_line(i64 %11)
  br label %13

13:                                               ; preds = %8, %1
  %14 = call i32 @pthread_mutex_unlock(i32* @mp_msg_lock)
  ret void
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @flush_status_line(i64) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
